<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="parse_app_id">SmqqaJ358gtvsoD1wAli03oQ1xGXw7atn8DEfq3O</string>
    <string name="parse_client_key">Itxa39Y8LIgIcBc587GZCkvqeKlGpQke3BoXPBJm</string>
    <string name="facebook_app_id">1753813288177461</string>
    <string name="app_name">TweetsApp</string>
    <string name="title_activity_tweetsapp_main_activity">tweetsapp_main_activity</string>
    <string name="title_activity_google_play_services">tweetsApp</string>
    <string name="sendMsg">Send</string>
    <string name="title_activity_registration">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_main">TweetsApp</string>
    <string name="title_activity_login">Login</string>
    <string name="text">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="or_txt">OR</string>
    <string name="title_activity_users_list">Users</string>
    <string name="back_button">Users</string>
    <string name="reg_filled_1">Username</string>
    <string name="reg_filled_2">Full name</string>
    <string name="reg_filled_3">Email</string>
    <string name="reg_filled_4">Password</string>
    <string name="reg_filled_5">Confirm</string>
    <string name="action_search">Search</string>
    <string name="title_activity_conversations">Conversations</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_group_create">Create Group</string>
    <string name="groupCreateField1">Group name</string>
    <string name="GroupCreateFiled2">Add users</string>
    <string name="create_button">Create group</string>
    <string name="group">New group...</string>
    <string name="new_conversation">New message</string>
    <string name="username">Username</string>
    <string name="usersSelectButton">OK</string>
    <string name="msg_time_text">HH:mm</string>
    <string name="msg_text">Message text</string>
    <string name="rate_button">Rate</string>
    <string name="date_text">mm/dd/yyyy</string>
    <string name="rowItemText">Item name</string>
    <string name="search_title">Search</string>
    <string name="conversation_search_hint">Search conversation...</string>
    <string name="user_search_hint">Search user...</string>
    <string name="msg_comments">Comments</string>
    <string name="curr_user_msg_recommendation">Should I?</string>
    <string name="user_msg_menu_comment">Add comment...</string>
    <string name="comment_hint">Add your comment...</string>
    <string name="network_connection_error">Internet connection is required.
        Check your internet connection</string>
    <string name="r_button_positive">Positive</string>
    <string name="r_button_negative">Negative</string>
    <string name="title_activity_comments">Comments</string>
    <string name="comment_dialog_title">New comment</string>
    <string name="grp_usr_select_title">Select users</string>
    <string name="username_dialog_title">Set username</string>
    <string name="comment_owner_username">comment owner</string>
    <string name="characters_to_type">60</string>
    <string name="recommendation_dialog_title">Your recommendation</string>
    <string name="recommendation">Recommendation text</string>

</resources>
