<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="il.tweetsapp.proj.tweetsapp.Conversations">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_group_create"
        android:title="@string/group"
        android:icon="@drawable/ic_action_add_group"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_new_conversation"
        android:title="@string/new_conversation"
        android:icon="@android:drawable/stat_notify_chat"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="ifRoom"  />
</menu>
