<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/rGroupClassification">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_button_positive"
            android:id="@+id/rButtonPos"
            android:layout_marginLeft="75dp"
            android:textColor="#00ff00" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_button_negative"
            android:id="@+id/rButtonNeg"
            android:layout_marginLeft="25dp"
            android:textColor="#ffff1f0e" />
    </RadioGroup>

    <EditText
        android:id="@+id/commentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment_hint"
        android:textColorHint="@android:color/secondary_text_light_nodisable"
        android:textColor="@android:color/black">

        <requestFocus />

    </EditText>

</LinearLayout>