<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="il.tweetsapp.proj.tweetsapp.Activities.Login"
    android:orientation="vertical"
    android:background="@drawable/tweetsapp_background2">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/mailLogin"
                android:layout_gravity="center_horizontal"
                android:hint="@string/text"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordLogin"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:text="@string/login_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="onLoginClick" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facebook_login"
                android:id="@+id/facebookButton"
                android:layout_gravity="center_horizontal"
                android:background="#3b5998"
                android:textColor="#ffffff"
                android:onClick="onFacebookClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/or_txt"
                android:id="@+id/textView"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:textColorHighlight="#ff6464ff"
                android:textColor="#ffffff"
                android:textSize="15dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_button"
                android:id="@+id/button2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:onClick="onSignUpClick" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
