<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/tweetsapp_background2"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_dialog_title"
            android:id="@+id/usernameDialogTitle"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:textSize="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/rGroupClassification"
        android:layout_marginTop="5dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_button_positive"
            android:button="@drawable/radio_button_theme_btn_radio_holo_light"
            android:id="@+id/rButtonPos"
            android:layout_marginLeft="65dp"
            android:textColor="#629632"
            android:layout_gravity="center" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_button_negative"
            android:button="@drawable/radio_button_red_btn_radio_holo_light"
            android:id="@+id/rButtonNeg"
            android:layout_marginLeft="20dp"
            android:textColor="#c00"
            android:layout_gravity="center" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:id="@+id/commentText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/comment_hint"
            android:textColorHint="@android:color/secondary_text_light_nodisable"
            android:textColor="@android:color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLength="60"
            android:layout_weight="0.8">

            <requestFocus />

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/characters_to_type"
            android:id="@+id/numOfChars"
            android:layout_marginRight="10dp" />
    </LinearLayout>

</LinearLayout>