<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/msg_time_text"
            android:id="@+id/msgTimeText"
            android:layout_gravity="center"
            android:textColor="#ff1c16ff"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_weight="0.8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_text"
                android:id="@+id/msgTextView"
                android:textSize="22dp"
                android:textColor="#fffffff5"
                android:background="#ffffad0d"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.75" />

            <TextView
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_button"
                android:id="@+id/rateButton"
                android:background="@drawable/abc_ic_menu_paste_mtrl_am_alpha"
                android:layout_weight="0.1"
                android:layout_marginLeft="25dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
